[metadata]
# replace with your username:
name = argo
version = 0.0.2
author = Miki Mendelson-Mints
author_email = mikimn1999@gmail.com
description = The no-brainer package for setting up python experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikimn/argo
project_urls =
    Bug Tracker = https://github.com/mikimn/argo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
